# 418a3

./: .gitignore  CHECKLIST.txt  CMakeLists.txt  README.md  REPORT.txt  a3.tar
Source/: Euclidean.cpp  Materials.cpp  Optics.cpp  Surface.cpp  bmp_io.cpp  light_source.cpp  raytracer.cpp  scene_object.cpp
a3/raytracerLinux/: .directory  .gitignore  BaseMaterials.cpp  BaseMaterials.h  Colour.cpp  Colour.h  Common.h  Euclidean.cpp  Euclidean.h  Intersection.cpp  Intersection.h  Makefile  Materials.cpp  Materials.h  Optics.cpp  Optics.h  Ray.cpp  Ray.h  Surface.cpp  Surface.h  bmp_io.cpp  bmp_io.h  light_source.cpp  light_source.h  raytracer  raytracer.cpp  raytracer.h  scene_object.cpp  scene_object.h  util.cpp  util.h
a3/raytracerW32/: Common.h  raytracer.cpp  raytracer.sln  raytracer.vcxproj  raytracer.vcxproj.filters
api/: BaseMaterials.h  Ray.h  bmp_io.h  light_source.h  raytracer.h  scene_object.h
